sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:6: error: not found: value getnombreValeurs
  for (i<- 0 to (getnombreValeurs()-1))
                 ^AlgBubbleSort1:7: error: not found: value pluspetit
  {if (pluspetit(i+1,i))
       ^